# ModalityReap

./: .gitignore  ENVIRONMENT_SETUP.md  environment.yml  pyproject.toml  requirements-core.txt
shell_example/: 00_INDEX.sh  01_env_setup.sh  02_run_unit_tests.sh  03_run_requirement4_smoke.sh  04_run_requirement4_main.sh  05_run_requirement4_save_model.sh  06_run_main_pipeline_standalone.sh  07_ablation_variants_manual.sh  08_compression_ratio_sweep.sh  09_resume_from_observation_cache.sh  10_eval_only_existing_model.sh  11_custom_merge_method.sh  12_view_results.sh  13_sensitivity_weight_ablation.sh  14_cluster_method_compare.sh  README_功能汇总.md
src/modality_reap/: __init__.py  args.py  cluster.py  data.py  eval.py  main.py  merge.py  metrics.py  model_util.py  observer.py  permute.py  reporting.py  requirement4.py  scoring.py  strategy.py
tests/: test_cluster.py  test_data.py  test_eval.py  test_merge.py  test_scoring.py  test_strategy.py
