[project]
name = "modality-reap"
version = "0.1.0"
description = "Modality-aware expert compression for Qwen3-Omni thinker MoE before distillation."
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0, <4.0.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "transformers==4.55.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
